src/main/java/com/google/code/gwt/crop/client/GWTCropper.css
@CHARSET "UTF-8";

@def handleSize 10px;

.base {
	background-color: #000;
	position: relative;
}
.imageCanvas {
	opacity: 0.4;
}
.selection {
	border: 1px dashed white;
	z-index: 1;
}
.handlesContainer {
	overflow: visible;
	z-index: 2;
}
.handle {
	width: handleSize;
	height: handleSize;
	border: 1px solid white;
	background: rgba(255, 255, 255, 0.25);
	position: absolute;
}

.base DIV {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

